uw guidelines and exposure.json mods

--- a/product_examples/errors-and-omissions/products/E&O/policy/underwriting.guidelines.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/underwriting.guidelines.liquid
@@ -19,6 +19,13 @@
 	{% endif %}
 {% endfor %}
 
+{% for professionalindemnity in professionalindemnities %}
+    {% assign valueofclaims5years = professionalindemnity.characteristics[0].field_values.valueofclaims5years %}
+    {% if valueofclaims5years >= 100000 %}
+        {{ "reject" | set_underwriting_decision }}
+        {{ "For 5 year total claims $100,000 and over cannot be bound." | add_underwriting_note }}
+    {% endif %}
+{% endfor %}
 
 {% if policy_v.10_year_felony_conviction_of_directors == 'Yes' %} 
     {{ "reject" | set_underwriting_decision }}
