--- a/product_examples/errors-and-omissions/products/E&O/policy/invoice.template.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/invoice.template.liquid
@@ -32,7 +32,7 @@
   </table>
 {% endheader %}
 
-<h1>Auto Insurance Invoice</h1><br>
+<h1>Insurance Invoice</h1><br>
 
 Invoice Number: <b>{{invoice.display_id}}</b><br>
 Invoice Date: <b>{{invoice.created_timestamp | timestamp_millis_print: "d MMM YYYY"}}</b><br>
