updated liquid and csv

--- a/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
@@ -9,6 +9,7 @@
 
 {% assign subcontract = exp_v.subcontractors_percent %}
 {% assign premium = premium | times: subcontract | round %}
+{% assign premium = premium | times: 0.01 | round %}
 
 
 {% comment %} scale Legal Liability premium according to number of claims {% endcomment %}
