--- a/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
@@ -7,8 +7,8 @@
 {% assign rate = "professional_indemnity_rate_table" | lookup: exp_v.professionalindemnity_type %}
 {% assign premium = premium | times: rate | round %}
 
-{% comment %} {% assign subcontract = exp_v.subcontractors_percent %}{% endcomment %}
-{% comment %} {% assign premium = premium | times: subcontract | divided_by: 100 | times: 0.01 | round %}{% endcomment %}
+ {% assign subcontract = exp_v.subcontractors_percent %}
+ {% assign premium = premium | divided_by: subcontract | divided_by: 100 | round %}
 
 
 {% comment %} scale Legal Liability premium according to number of claims {% endcomment %}
@@ -34,7 +34,7 @@
 {% endif %}
 
 {% if peril_c.indemnity_in_aggregate > 0 %}
-	{% assign adj = peril_c.indemnity_in_aggregate | minus: 100000 %}
+	{% assign adj = peril_c.indemnity_in_aggregate | minus: 1000000 %}
 	{% if adj < 0 %}
 		{% assign adj = 0 %}
 	{% endif %}
