--- a/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
@@ -8,7 +8,7 @@
 {% assign premium = premium | times: rate | round %}
 
  {% assign subcontract = exp_v.subcontractors_percent %}
- {% assign premium = premium | divided_by: subcontract | divided_by: 100 | round %}
+ {% assign premium = premium | divided_by: subcontract | divided_by: 100 | times: 0.002 | round %}
 
 
 {% comment %} scale Legal Liability premium according to number of claims {% endcomment %}
