--- a/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
@@ -2,13 +2,13 @@
 {% assign exp_v = data.exposure_characteristics.field_values %}
 {% assign peril_c = data.peril_characteristics %}
 
-{% assign premium = exp_v.revenuethisyear | times: 0.005 | round %}
+{% assign premium = exp_v.revenuethisyear | times: 0.002 | round %}
 
 {% assign rate = "professional_indemnity_rate_table" | lookup: exp_v.professionalindemnity_type %}
 {% assign premium = premium | times: rate | round %}
 
- {% assign subcontract = exp_v.subcontractors_percent %}
- {% assign premium = premium | divided_by: subcontract | divided_by: 100 | times: 0.002 | round %}
+{% comment %}{% assign subcontract = exp_v.subcontractors_percent %}{% endcomment %}
+{% comment %}{% assign premium = premium | times: subcontract | divided_by: 100 | times: 0.002 | round %}{% endcomment %}
 
 
 {% comment %} scale Legal Liability premium according to number of claims {% endcomment %}
