--- a/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
@@ -8,7 +8,11 @@
 {% assign premium = premium | times: rate | round %}
 
 {% assign subcontract = exp_v.subcontractors_percent %}
-{% assign premium = premium | times: subcontract | divided_by: 100 | times: 1.002 | round %}
+{% assign adjust = adjust | times: subcontract | divided_by: 100 | times: 1.01 | round %}
+{% if adjust = 0 %}
+    {% assign adjust = 1 %}
+{% endif %}
+{% assign premium = premium | times: adjust %}
 
 
 {% comment %} scale Legal Liability premium according to number of claims {% endcomment %}
