mods in exp liquid json

--- a/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
@@ -20,7 +20,9 @@
 {% elsif subcontract == "30-40%" %}
    {% assign subcontract = 3.5 %} 
 {% elsif subcontract == "40-50%" %}
-   {% assign subcontract = 4.5 %} 
+   {% assign subcontract = 4.5 %}
+{% elsif subcontract == "More than 50%" %}
+   {% assign subcontract = 6 %}    
 {% else %}
    {% assign subcontract = 1 %}
 {% endif %}
