updated exp liq state rate

--- a/product_examples/errors-and-omissions/products/errors-omissions/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
+++ b/product_examples/errors-and-omissions/products/errors-omissions/policy/exposures/professional_indemnity/perils/a_legal_liability.premium.liquid
@@ -7,6 +7,9 @@
 {% assign rate = "professional_indemnity_rate_table" | lookup: exp_v.professionalindemnity_type %}
 {% assign premium = premium | times: rate | round %}
 
+{% assign staterate = "state_rate_table" | lookup: exp_v.office_domicile_state %}
+{% assign premium = premium | times: staterate | round %}
+
 {% comment %} scale Legal Liability premium according to subcontract% {% endcomment %}
 {% assign subcontract = exp_v.subcontractors_percent %}
 
