--- a/product_examples/termlife/products/term-life/policy/exposures/insured/perils/disability.premium.liquid
+++ b/product_examples/termlife/products/term-life/policy/exposures/insured/perils/disability.premium.liquid
@@ -36,13 +36,13 @@
 {% assign days_duration = data.peril_characteristics.coverage_start_timestamp | get_30_360_day_count: data.peril_characteristics.coverage_end_timestamp %}
 {% assign scaled_premium = peril_premium | times: days_duration | divided_by: 360.00 %}
 
-{{ scaled_premium | set_peril_premium }}
+{{ scaled_premium | set_month_premium }}
 
-{{ scaled_premium | times: 0.8 | set_peril_technical_premium }}
+{{ scaled_premium | times: 0.8 | set_month_technical_premium }}
 
 {% comment %} commission at a flat 5% {% endcomment %}
 {% if data.policy_characteristics.field_values.channel == 'Agent' %}
-    {{ scaled_premium | times: 0.05 | add_commission: "Agent1234" }}
+    {{ scaled_premium | times: 0.05 | add_month_commission: "Agent1234" }}
 {% elsif data.policy_characteristics.field_values.channel == 'Broker' %}
-    {{ scaled_premium | times: 0.05 | add_commission: "Broker6789" }}
+    {{ scaled_premium | times: 0.05 | add_month_commission: "Broker6789" }}
 {% endif %}
